[infra-proxy-service] Add ResetOrgAdminKey API (#3661)
* [infra-proxy-service] Add ResetOrgAdminKey API


* [infra-proxy-service] Missing new line
