# api/interservice/infra_proxy/request/orgs.pb.go
@@ -112,10 +112,8 @@ type UpdateOrg struct {
 	Name string `protobuf:"bytes,2,opt,name=name,proto3" json:"name,omitempty" toml:"name,omitempty" mapstructure:"name,omitempty"`
 	// Chef organization admin user.
 	AdminUser string `protobuf:"bytes,3,opt,name=admin_user,json=adminUser,proto3" json:"admin_user,omitempty" toml:"admin_user,omitempty" mapstructure:"admin_user,omitempty"`
-	// Chef organization admin key.
-	AdminKey string `protobuf:"bytes,4,opt,name=admin_key,json=adminKey,proto3" json:"admin_key,omitempty" toml:"admin_key,omitempty" mapstructure:"admin_key,omitempty"`
 	// Chef Infra Server ID.
-	ServerId string `protobuf:"bytes,5,opt,name=server_id,json=serverId,proto3" json:"server_id,omitempty" toml:"server_id,omitempty" mapstructure:"server_id,omitempty"`
+	ServerId string `protobuf:"bytes,4,opt,name=server_id,json=serverId,proto3" json:"server_id,omitempty" toml:"server_id,omitempty" mapstructure:"server_id,omitempty"`
 	// List of projects this chef organization belongs to. May be empty.
 	Projects             []string `protobuf:"bytes,6,rep,name=projects,proto3" json:"projects,omitempty" toml:"projects,omitempty" mapstructure:"projects,omitempty"`
 	XXX_NoUnkeyedLiteral struct{} `json:"-" toml:"-" mapstructure:"-,omitempty"`
@@ -165,13 +163,6 @@ func (m *UpdateOrg) GetName() string {
 func (m *UpdateOrg) GetAdminUser() string {
 	if m != nil {
 		return m.AdminUser
-	}
-	return ""
-}
-
-func (m *UpdateOrg) GetAdminKey() string {
-	if m != nil {
-		return m.AdminKey
 	}
 	return ""
 }
@@ -328,12 +319,71 @@ func (m *GetOrg) GetServerId() string {
 	return ""
 }
 
+type ResetOrgAdminKey struct {
+	// Chef organization ID.
+	Id string `protobuf:"bytes,1,opt,name=id,proto3" json:"id,omitempty" toml:"id,omitempty" mapstructure:"id,omitempty"`
+	// Chef Infra Server ID.
+	ServerId string `protobuf:"bytes,2,opt,name=server_id,json=serverId,proto3" json:"server_id,omitempty" toml:"server_id,omitempty" mapstructure:"server_id,omitempty"`
+	// Chef organization admin key.
+	AdminKey             string   `protobuf:"bytes,3,opt,name=admin_key,json=adminKey,proto3" json:"admin_key,omitempty" toml:"admin_key,omitempty" mapstructure:"admin_key,omitempty"`
+	XXX_NoUnkeyedLiteral struct{} `json:"-" toml:"-" mapstructure:"-,omitempty"`
+	XXX_unrecognized     []byte   `json:"-" toml:"-" mapstructure:"-,omitempty"`
+	XXX_sizecache        int32    `json:"-" toml:"-" mapstructure:"-,omitempty"`
+}
+
+func (m *ResetOrgAdminKey) Reset()         { *m = ResetOrgAdminKey{} }
+func (m *ResetOrgAdminKey) String() string { return proto.CompactTextString(m) }
+func (*ResetOrgAdminKey) ProtoMessage()    {}
+func (*ResetOrgAdminKey) Descriptor() ([]byte, []int) {
+	return fileDescriptor_c2068df3348ec5f9, []int{5}
+}
+
+func (m *ResetOrgAdminKey) XXX_Unmarshal(b []byte) error {
+	return xxx_messageInfo_ResetOrgAdminKey.Unmarshal(m, b)
+}
+func (m *ResetOrgAdminKey) XXX_Marshal(b []byte, deterministic bool) ([]byte, error) {
+	return xxx_messageInfo_ResetOrgAdminKey.Marshal(b, m, deterministic)
+}
+func (m *ResetOrgAdminKey) XXX_Merge(src proto.Message) {
+	xxx_messageInfo_ResetOrgAdminKey.Merge(m, src)
+}
+func (m *ResetOrgAdminKey) XXX_Size() int {
+	return xxx_messageInfo_ResetOrgAdminKey.Size(m)
+}
+func (m *ResetOrgAdminKey) XXX_DiscardUnknown() {
+	xxx_messageInfo_ResetOrgAdminKey.DiscardUnknown(m)
+}
+
+var xxx_messageInfo_ResetOrgAdminKey proto.InternalMessageInfo
+
+func (m *ResetOrgAdminKey) GetId() string {
+	if m != nil {
+		return m.Id
+	}
+	return ""
+}
+
+func (m *ResetOrgAdminKey) GetServerId() string {
+	if m != nil {
+		return m.ServerId
+	}
+	return ""
+}
+
+func (m *ResetOrgAdminKey) GetAdminKey() string {
+	if m != nil {
+		return m.AdminKey
+	}
+	return ""
+}
+
 func init() {
 	proto.RegisterType((*CreateOrg)(nil), "chef.automate.domain.infra_proxy.request.CreateOrg")
 	proto.RegisterType((*UpdateOrg)(nil), "chef.automate.domain.infra_proxy.request.UpdateOrg")
 	proto.RegisterType((*DeleteOrg)(nil), "chef.automate.domain.infra_proxy.request.DeleteOrg")
 	proto.RegisterType((*GetOrgs)(nil), "chef.automate.domain.infra_proxy.request.GetOrgs")
 	proto.RegisterType((*GetOrg)(nil), "chef.automate.domain.infra_proxy.request.GetOrg")
+	proto.RegisterType((*ResetOrgAdminKey)(nil), "chef.automate.domain.infra_proxy.request.ResetOrgAdminKey")
 }
 
 func init() {
@@ -341,24 +391,25 @@ func init() {
 }
 
 var fileDescriptor_c2068df3348ec5f9 = []byte{
-	// 289 bytes of a gzipped FileDescriptorProto
-	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0xcc, 0x92, 0xb1, 0x4b, 0xc3, 0x40,
-	0x14, 0xc6, 0x49, 0x5a, 0x63, 0xf3, 0x06, 0x87, 0x9b, 0x0e, 0x45, 0x28, 0x1d, 0xa4, 0xd3, 0xdd,
-	0x20, 0x82, 0x8b, 0x08, 0x2a, 0x88, 0x38, 0x14, 0x84, 0x2e, 0x2e, 0xe1, 0x9a, 0x7b, 0x4d, 0x4f,
-	0x4d, 0x2e, 0xbe, 0xbb, 0x88, 0xf9, 0x7f, 0xfc, 0x43, 0x25, 0x17, 0x0b, 0x46, 0x1c, 0x74, 0xeb,
-	0x76, 0xef, 0xfb, 0xbd, 0xf7, 0xf1, 0x1d, 0x7c, 0x20, 0x55, 0x6d, 0xa4, 0xa9, 0x3c, 0x92, 0x43,
-	0x7a, 0x33, 0x39, 0x4a, 0x53, 0xad, 0x49, 0x65, 0x35, 0xd9, 0xf7, 0x56, 0x12, 0xbe, 0x36, 0xe8,
-	0xbc, 0xb4, 0x54, 0x38, 0x51, 0x93, 0xf5, 0x96, 0xcd, 0xf3, 0x0d, 0xae, 0x85, 0x6a, 0xbc, 0x2d,
-	0x95, 0x47, 0xa1, 0x6d, 0xa9, 0x4c, 0x25, 0xbe, 0x1d, 0x89, 0xaf, 0xa3, 0xd9, 0x47, 0x04, 0xe9,
-	0x35, 0xa1, 0xf2, 0xb8, 0xa0, 0x82, 0x1d, 0x40, 0x6c, 0x34, 0x8f, 0xa6, 0xd1, 0x3c, 0x7d, 0x88,
-	0x8d, 0x66, 0x0c, 0xc6, 0x95, 0x2a, 0x91, 0xc7, 0x41, 0x09, 0x6f, 0x76, 0x0c, 0xa0, 0x74, 0x69,
-	0xaa, 0xac, 0x71, 0x48, 0x7c, 0x14, 0x48, 0x1a, 0x94, 0xa5, 0x43, 0x62, 0x47, 0xd0, 0x0f, 0xd9,
-	0x33, 0xb6, 0x7c, 0x1c, 0xe8, 0x24, 0x08, 0xf7, 0xd8, 0x76, 0xb0, 0xfb, 0x01, 0x52, 0x66, 0x34,
-	0xdf, 0xeb, 0x61, 0x2f, 0xdc, 0x69, 0x76, 0x08, 0x93, 0x9a, 0xec, 0x13, 0xe6, 0xde, 0xf1, 0x64,
-	0x3a, 0xea, 0xd8, 0x76, 0x0e, 0x31, 0x97, 0xb5, 0xde, 0xf5, 0x98, 0xe7, 0x90, 0xde, 0xe0, 0x0b,
-	0xfe, 0x9e, 0x72, 0xe0, 0x1a, 0x0f, 0x5d, 0x67, 0x27, 0xb0, 0x7f, 0x8b, 0x7e, 0x41, 0x85, 0x1b,
-	0xee, 0x45, 0x3f, 0xf6, 0xce, 0x20, 0xe9, 0xf7, 0xfe, 0x65, 0x7f, 0x75, 0xf9, 0x78, 0x51, 0x18,
-	0xbf, 0x69, 0x56, 0x22, 0xb7, 0xa5, 0xec, 0xda, 0x21, 0xb7, 0xed, 0xf8, 0x53, 0xb9, 0x56, 0x49,
-	0x28, 0xd6, 0xe9, 0x67, 0x00, 0x00, 0x00, 0xff, 0xff, 0x20, 0x06, 0x5d, 0x1e, 0x8b, 0x02, 0x00,
-	0x00,
+	// 316 bytes of a gzipped FileDescriptorProto
+	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0xac, 0x52, 0x4d, 0x4b, 0xc3, 0x40,
+	0x10, 0x25, 0x69, 0xad, 0xcd, 0x1c, 0x44, 0xf6, 0x14, 0x14, 0xa1, 0xf4, 0x20, 0x3d, 0xed, 0x1e,
+	0x44, 0xf0, 0x22, 0xe2, 0x07, 0x88, 0x78, 0x28, 0x14, 0x7a, 0x11, 0x21, 0x6c, 0xb3, 0xd3, 0x74,
+	0xd5, 0x64, 0xe3, 0xec, 0x46, 0xec, 0x2f, 0xf0, 0x8f, 0xf8, 0x43, 0x25, 0x1b, 0x8b, 0x46, 0x3c,
+	0x18, 0xf0, 0x96, 0x79, 0x6f, 0xde, 0xe3, 0x65, 0xe7, 0x81, 0x90, 0xa5, 0x16, 0xba, 0x70, 0x48,
+	0x16, 0xe9, 0x45, 0xa7, 0x28, 0x74, 0xb1, 0x24, 0x99, 0x94, 0x64, 0x5e, 0xd7, 0x82, 0xf0, 0xb9,
+	0x42, 0xeb, 0x84, 0xa1, 0xcc, 0xf2, 0x92, 0x8c, 0x33, 0x6c, 0x92, 0xae, 0x70, 0xc9, 0x65, 0xe5,
+	0x4c, 0x2e, 0x1d, 0x72, 0x65, 0x72, 0xa9, 0x0b, 0xfe, 0x4d, 0xc4, 0x3f, 0x45, 0xe3, 0xf7, 0x00,
+	0xa2, 0x4b, 0x42, 0xe9, 0x70, 0x4a, 0x19, 0xdb, 0x81, 0x50, 0xab, 0x38, 0x18, 0x05, 0x93, 0x68,
+	0x16, 0x6a, 0xc5, 0x18, 0xf4, 0x0b, 0x99, 0x63, 0x1c, 0x7a, 0xc4, 0x7f, 0xb3, 0x03, 0x00, 0xa9,
+	0x72, 0x5d, 0x24, 0x95, 0x45, 0x8a, 0x7b, 0x9e, 0x89, 0x3c, 0x32, 0xb7, 0x48, 0x6c, 0x1f, 0x9a,
+	0x21, 0x79, 0xc4, 0x75, 0xdc, 0xf7, 0xec, 0xd0, 0x03, 0xb7, 0xb8, 0xae, 0xc9, 0xfa, 0x0f, 0x90,
+	0x12, 0xad, 0xe2, 0xad, 0x86, 0x6c, 0x80, 0x1b, 0xc5, 0xf6, 0x60, 0x58, 0x92, 0x79, 0xc0, 0xd4,
+	0xd9, 0x78, 0x30, 0xea, 0xd5, 0xdc, 0x66, 0x1e, 0xbf, 0x05, 0x10, 0xcd, 0x4b, 0xf5, 0xaf, 0x31,
+	0xbf, 0x92, 0xf4, 0x3b, 0x24, 0x39, 0x81, 0xe8, 0x0a, 0x9f, 0xf0, 0xf7, 0x20, 0x2d, 0xd7, 0xb0,
+	0xed, 0x3a, 0x3e, 0x84, 0xed, 0x6b, 0x74, 0x53, 0xca, 0x6c, 0x7b, 0x2f, 0xf8, 0xb1, 0x77, 0x0c,
+	0x83, 0x66, 0xaf, 0x9b, 0xfd, 0x3d, 0xec, 0xce, 0xd0, 0x7a, 0xe1, 0xf9, 0xe6, 0xbd, 0xbb, 0x18,
+	0xb4, 0x2f, 0xd7, 0x6b, 0x5f, 0xee, 0xe2, 0xec, 0xee, 0x34, 0xd3, 0x6e, 0x55, 0x2d, 0x78, 0x6a,
+	0x72, 0x51, 0xd7, 0x4b, 0x6c, 0xea, 0xf5, 0xa7, 0x76, 0x2e, 0x06, 0xbe, 0x99, 0x47, 0x1f, 0x01,
+	0x00, 0x00, 0xff, 0xff, 0x57, 0x09, 0xeb, 0x70, 0xcc, 0x02, 0x00, 0x00,
 }
